# EppoCore

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  premake5.lua
EppoApp/: premake5.lua
EppoApp/Source/: AppLayer.cpp  AppLayer.h
EppoCore/: .gitmodules  CMakeLists.txt  premake5.lua
EppoCore/Shaders/: Quad.frag  Quad.vert  Text.frag  Text.vert
EppoCore/Source/: EppoCore.h  pch.h
EppoCore/Source/Core/: Application.cpp  Application.h  Assert.h  Base.h  Entrypoint.h  Image.cpp  Image.h  KeyCodes.h  Layer.h  Log.cpp  Log.h  MouseCodes.h  Window.cpp  Window.h
EppoCore/Source/EppoCore/Buffer/: UniformBuffer.cpp  UniformBuffer.h
EppoCore/Source/EppoCore/Core/: Application.cpp  Application.h  ApplicationSpecification.h  Assert.h  Base.h  Buffer.cpp  Buffer.h  BufferReader.cpp  BufferReader.h  BufferWriter.cpp  BufferWriter.h  Entrypoint.h  Image.cpp  Input.cpp  Input.h  Layer.h  Log.cpp  Log.h  Random.h  Timer.h  Window.cpp  Window.h
EppoCore/Source/EppoCore/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
EppoCore/Source/EppoCore/Platform/GUI/: ApplicationGUI.cpp  ApplicationGUI.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.h  Window.cpp  Window.h
EppoCore/Source/EppoCore/Platform/GUI/Event/: ApplicationEvent.h  Event.h
EppoCore/Source/EppoCore/Platform/GUI/UI/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
EppoCore/Source/EppoCore/Platform/Headless/: ApplicationHeadless.cpp  ApplicationHeadless.h
EppoCore/Source/EppoCore/Shader/: ComputeShader.cpp  ComputeShader.h  Query.cpp  Query.h
EppoCore/Source/EppoCore/UI/: ImGuiLayer.cpp  ImGuiLayer.h
EppoCore/Source/Event/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
EppoCore/Source/UI/: ImGuiLayer.cpp  ImGuiLayer.h
Misc/: Dependencies.cmake  PatchRepo.cmake
Misc/Patches/imgui/: 00-AddedCMake.patch
Scripts/: GenerateProjects-Win.bat
